[gd_scene load_steps=12 format=1]

[ext_resource path="res://resources/wizard_flyer.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/star_halo.png" type="Texture" id=2]
[ext_resource path="res://assets/graphics/wiz_legs_sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/graphics/wiz_arms_sheet.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/wiz_head_sheet.png" type="Texture" id=5]
[ext_resource path="res://assets/graphics/star_small.png" type="Texture" id=6]
[ext_resource path="res://assets/graphics/elements.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 15.5669

[sub_resource type="Animation" id=2]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ), "transitions":FloatArray( 1, 1, 1, 1, 1, 1, 1 ), "values":[ 0, 1, 2, 3, 5, 6, 7 ] }

[sub_resource type="Animation" id=3]

length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/keys = { "cont":false, "times":FloatArray( 0, 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "values":[ 0, 1, 2, 3 ] }

[sub_resource type="ColorRamp" id=4]

offsets = FloatArray( 0, 0.284327, 0.531207, 1 )
colors = ColorArray( 1, 0.117188, 0, 1, 1, 0.991394, 0.449219, 0.715673, 0.0549367, 1, 0.734201, 0.468793, 1, 0, 0.914063, 0 )

[node name="Player" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 0.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = true
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = false
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )

[node name="shoot_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.7
one_shot = false
autostart = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="base" type="Sprite" parent="."]

visibility/self_opacity = 0.0
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
modulate = Color( 1, 1, 1, 0.385734 )

[node name="pants" type="Sprite" parent="base"]

material/use_parent = true
transform/pos = Vector2( 5, 0 )
texture = ExtResource( 3 )
vframes = 3
frame = 1

[node name="arms" type="Sprite" parent="base"]

material/use_parent = true
transform/pos = Vector2( 25, 0 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
vframes = 2
hframes = 4
frame = 7

[node name="anim" type="AnimationPlayer" parent="base/arms"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/main = SubResource( 2 )
playback/active = true
playback/speed = 6.0
blend_times = [  ]
autoplay = ""

[node name="head" type="Sprite" parent="base"]

transform/pos = Vector2( 25, -3 )
texture = ExtResource( 5 )
vframes = 4

[node name="anim" type="AnimationPlayer" parent="base/head"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/main = SubResource( 3 )
playback/active = true
playback/speed = 1.5
blend_times = [  ]
autoplay = "main"

[node name="prograde" type="Position2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="prograde"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="pantjets" type="Particles2D" parent="."]

visibility/behind_parent = true
visibility/blend_mode = 1
config/amount = 64
config/lifetime = 1.0
config/time_scale = 0.5
config/half_extents = Vector2( 0, 16 )
config/local_space = false
config/texture = ExtResource( 6 )
params/direction = 0.0
params/spread = 50.0
params/linear_velocity = 0.0
params/spin_velocity = 20.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 0.0
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 0.0
params/hue_variation = 0.2
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/spin_velocity = 1.0
randomness/initial_angle = 1.0
randomness/initial_size = 1.0
randomness/hue_variation = 0.2
color/color_ramp = SubResource( 4 )

[node name="shoot_point" type="Position2D" parent="."]

transform/pos = Vector2( 110, 0 )
__meta__ = { "_editor_collapsed":true }

[node name="shoot_left" type="Position2D" parent="shoot_point"]

transform/pos = Vector2( 0, -26 )

[node name="shoot_right" type="Position2D" parent="shoot_point"]

transform/pos = Vector2( 0, 26 )

[node name="current_element" type="Sprite" parent="."]

transform/pos = Vector2( -7.92229, -52.8153 )
texture = ExtResource( 7 )
hframes = 5

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]


